--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -17,6 +17,9 @@ apply from: '../build.dependencies.gradle'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
+    buildFeatures {
+        mlModelBinding true
+    }
 
     packagingOptions {
         jniLibs.useLegacyPackaging true
@@ -25,5 +28,6 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
