tensorflow again again??

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -29,5 +29,6 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:2.3.0'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
